// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Priority component when given different priority enums correctly renders high priority 1`] = `
<div>
  <div
    class="Task-priority High"
  >
    <svg
      style="width: 1rem; height: 1rem;"
      viewBox="0 0 24 24"
    >
      <path
        d="M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z"
        fill="currentColor"
      />
    </svg>
    <p>
      High
    </p>
  </div>
</div>
`;

exports[`Priority component when given different priority enums correctly renders low priority 1`] = `
<div>
  <div
    class="Task-priority Low"
  >
    <svg
      style="width: 1rem; height: 1rem;"
      viewBox="0 0 24 24"
    >
      <path
        d="M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z"
        fill="currentColor"
      />
    </svg>
    <p>
      Low
    </p>
  </div>
</div>
`;

exports[`Priority component when given different priority enums correctly renders medium priority 1`] = `
<div>
  <div
    class="Task-priority Medium"
  >
    <svg
      style="width: 1rem; height: 1rem;"
      viewBox="0 0 24 24"
    >
      <path
        d="M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z"
        fill="currentColor"
      />
    </svg>
    <p>
      Medium
    </p>
  </div>
</div>
`;
